Changed display grid to position relative in main-page

--- a/index.html
+++ b/index.html
@@ -26,18 +26,22 @@
                 </div>
             </div>
             <div class="main-page">
-                <img
-                    class="main-page__img main-page__img--top"
-                    src="img/line_top.png"
-                />
-                <h1 class="main-page__title">Milena & Adam</h1>
-                <p class="main-page__text">
-                    "Lorem ipsum dolor sit amet, consectetur adipisicing elit."
-                </p>
-                <img
-                    class="main-page__img main-page__img--bottom"
-                    src="img/line_bottom.png"
-                />
+                <div class="main-page__text-box">
+                    <img
+                        class="main-page__img main-page__img--top"
+                        src="img/line_top.png"
+                    />
+                    <h1 class="main-page__title">Milena & Adam</h1>
+                    <p class="main-page__text">
+                        "Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit."
+                    </p>
+
+                    <img
+                        class="main-page__img main-page__img--bottom"
+                        src="img/line_bottom.png"
+                    />
+                </div>
             </div>
             <div class="date-section">
                 <div class="date-section__header">
