header, date-section, html corrections

--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
                         class="main-page__img main-page__img--top"
                         src="img/line_top.png"
                     />
-                    <h1 class="main-page__title">Milena & Adam</h1>
+                    <div class="main-page__title">
+                        <h1 class="main-page__title-her-name">Milena</h1>
+                        <span class="main-page__title-separator">&</span>
+                        <h1 class="main-page__title-his-name">Adam</h1>
+                    </div>
                     <p class="main-page__text">
                         "Lorem ipsum dolor sit amet, consectetur adipisicing
                         elit."
