added story sevtion - vasic version

--- a/index.html
+++ b/index.html
@@ -112,6 +112,29 @@
                     </figure>
                 </div>
             </div>
+
+            <div class="story">
+                <h1 class="story__title">NASZA HISTORIA</h1>
+                <div class="story__container">
+                    <div
+                        class="story__first-meet story__item story__item--first"
+                    >
+                        <div class="story__item-title">BIESZCZADY</div>
+                    </div>
+                    <div class="story__first-date story__item">
+                        <div class="story__item-title">OPOLE</div>
+                    </div>
+                    <div class="story__travel story__item">
+                        <div class="story__item-title">PODRÓŻE</div>
+                    </div>
+                    <div class="story__engagement story__item">
+                        <div class="story__item-title">JEROZOLIMA</div>
+                    </div>
+                    <div class="story__wedding story__item">
+                        <div class="story__item-title">ŚLUB</div>
+                    </div>
+                </div>
+            </div>
             <div class="gallery">
                 <h1 class="gallery__title">Galeria</h1>
                 <div class="gallery__card">
@@ -163,7 +186,8 @@
                     />
                 </div>
             </div>
-            <div class="helpful-information"></div>
+
+            <div class="helpful-information">PRZYDATNE INFORMACJE</div>
             <div class="map"></div>
             <div class="contact"></div>
         </div>
