story section changes

--- a/index.html
+++ b/index.html
@@ -120,18 +120,53 @@
                         class="story__first-meet story__item story__item--first"
                     >
                         <div class="story__item-title">BIESZCZADY</div>
+                        <div
+                            class="story__item-img story__item-img--bieszczady"
+                        ></div>
+                        <div class="story__item-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Modi, repellendus.
+                        </div>
                     </div>
                     <div class="story__first-date story__item">
                         <div class="story__item-title">OPOLE</div>
+                        <div
+                            class="story__item-img story__item-img--opole"
+                        ></div>
+                        <div class="story__item-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Modi, repellendus.
+                        </div>
                     </div>
                     <div class="story__travel story__item">
                         <div class="story__item-title">PODRÓŻE</div>
+                        <div
+                            class="story__item-img story__item-img--travel"
+                        ></div>
+                        <div class="story__item-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Modi, repellendus.
+                        </div>
                     </div>
                     <div class="story__engagement story__item">
                         <div class="story__item-title">JEROZOLIMA</div>
+                        <div
+                            class="story__item-img story__item-img--jerusalem"
+                        ></div>
+                        <div class="story__item-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Modi, repellendus.
+                        </div>
                     </div>
-                    <div class="story__wedding story__item">
+                    <div class="story__wedding story__item story__item--last">
                         <div class="story__item-title">ŚLUB</div>
+                        <div
+                            class="story__item-img story__item-img--wedding"
+                        ></div>
+                        <div class="story__item-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Modi, repellendus.
+                        </div>
                     </div>
                 </div>
             </div>
