added separator, map section, contact form

--- a/index.html
+++ b/index.html
@@ -47,6 +47,20 @@
                     />
                 </div>
             </div>
+            <div class="newlyweds">
+                <div class="newlyweds__avatar">
+                    <figure>
+                        <img class="newlyweds__img" src="img/bride.png" />
+                    </figure>
+                </div>
+                <div class="newlyweds__names">Milena & Adam</div>
+                <div class="newlyweds__avatar">
+                    <figure>
+                        <img class="newlyweds__img" src="img/groom.png" />
+                    </figure>
+                </div>
+            </div>
+            <div class="separator"></div>
             <div class="date-section">
                 <div class="date-section__header">
                     <h1 class="date-section__date">22 Maj 2021</h1>
@@ -99,19 +113,43 @@
                     </div>
                 </div>
             </div>
-            <div class="newlyweds">
-                <div class="newlyweds__avatar">
-                    <figure>
-                        <img class="newlyweds__img" src="img/bride.png" />
-                    </figure>
+            <div class="separator"></div>
+            <div class="map">
+                <div class="map__item">
+                    <h2 class="map__title">Ceremonia Ślubna</h2>
+                    <h3 class="map__subtitle">
+                        Kościół św. Katarzyny Aleksandryjskiej w Strojcu
+                    </h3>
+                    <p class="map__address">Długa 18, 46-320 Praszka</p>
+                    <iframe
+                        class="map__google map__google--church"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1024.8219578173532!2d18.498380293085113!3d51.03695867319462!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47108f471e1c7c01%3A0xdc247eb602d09ad9!2sParafia%20%C5%9Bw.%20Katarzyny%20Aleksandryjskiej%20w%20Strojcu!5e0!3m2!1spl!2spl!4v1607369340861!5m2!1spl!2spl"
+                        width="250"
+                        height="250"
+                        frameborder="0"
+                        allowfullscreen=""
+                        aria-hidden="false"
+                        tabindex="0"
+                    ></iframe>
                 </div>
-                <div class="newlyweds__names">Milena & Adam</div>
-                <div class="newlyweds__avatar">
-                    <figure>
-                        <img class="newlyweds__img" src="img/groom.png" />
-                    </figure>
+                <div class="map__item">
+                    <h2 class="map__title">Przyjęcie weselne</h2>
+                    <h3 class="map__subtitle">Sala weselna WERONA</h3>
+                    <p class="map__address">ul. Kaliska 72, 46-320 Praszka</p>
+                    <iframe
+                        class="map__google map__google--wedding-house"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1760.2304988645792!2d18.459621202508618!3d51.06453108864942!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4710862135ae7575%3A0xddbdc67f2fea27a0!2sWerona%20Praszka!5e0!3m2!1spl!2spl!4v1607369595117!5m2!1spl!2spl"
+                        width="250"
+                        height="250"
+                        frameborder="0"
+                        style="border: 0"
+                        allowfullscreen=""
+                        aria-hidden="false"
+                        tabindex="0"
+                    ></iframe>
                 </div>
             </div>
+            <div class="separator"></div>
 
             <div class="story">
                 <h1 class="story__title">NASZA HISTORIA</h1>
@@ -170,6 +208,7 @@
                     </div>
                 </div>
             </div>
+            <div class="separator"></div>
             <div class="gallery">
                 <h1 class="gallery__title">Galeria</h1>
                 <div class="gallery__card">
@@ -180,51 +219,86 @@
                         alt=""
                     />
                 </div>
-                <div class="gallery__card">
-                    <h3 class="gallery__card-title">Zdjęcie 2</h3>
-                    <img
-                        class="gallery__img"
-                        src="https://placeimg.com/640/480/arch"
-                        alt=""
-                    />
-                </div>
-                <div class="gallery__card">
-                    <h3 class="gallery__card-title">Zdjęcie 3</h3>
-                    <img
-                        class="gallery__img"
-                        src="https://placeimg.com/640/480/animals"
-                        alt=""
-                    />
-                </div>
-                <div class="gallery__card">
-                    <h3 class="gallery__card-title">Zdjęcie 3</h3>
-                    <img
-                        class="gallery__img"
-                        src="https://placeimg.com/640/480/animals"
-                        alt=""
-                    />
-                </div>
-                <div class="gallery__card">
-                    <h3 class="gallery__card-title">Zdjęcie 4</h3>
-                    <img
-                        class="gallery__img"
-                        src="https://placeimg.com/640/480/nature"
-                        alt=""
-                    />
-                </div>
-                <div class="gallery__card">
-                    <h3 class="gallery__card-title">Zdjęcie 5</h3>
-                    <img
-                        class="gallery__img"
-                        src="https://placeimg.com/640/480/animals"
-                        alt=""
-                    />
+            </div>
+            <div class="separator"></div>
+            <div class="helpful-information">
+                <h3 class="helpful-information__title">Przydatne informacje</h3>
+                <div class="map">
+                    <div class="map__item">
+                        <h2 class="map__title">Nocleg</h2>
+                        <h3 class="map__subtitle">Hotel Jurajska Perła</h3>
+                        <p class="map__address">Pątnów 320, 98-335</p>
+                        <iframe
+                            class="map__google map__google--hotel"
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2503.682176864185!2d18.609425910312225!3d51.13277018634856!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47108382dc664991%3A0x3f827688d05108ee!2sJurajska%20Per%C5%82a!5e0!3m2!1spl!2spl!4v1607373095981!5m2!1spl!2spl"
+                            width="250"
+                            height="250"
+                            frameborder="0"
+                            style="border: 0"
+                            allowfullscreen=""
+                            aria-hidden="false"
+                            tabindex="0"
+                        ></iframe>
+                    </div>
                 </div>
             </div>
+            <div class="separator"></div>
+            <div class="contact">
+                <h1>Kontakt telefoniczny</h1>
+                <div class="contact__he">Adam: 667 141 206</div>
+                <div class="contact__she">Milena: 883 424 612</div>
+                <div class="contact__send-message contact-panel">
+                    <h2 class="contact__send-message-title">Napisz do nas</h2>
+                    <form class="contact-panel__form" action="">
+                        <label
+                            class="contact-panel__form-item contact-panel__input-label"
+                            for="fname"
+                            >Imię</label
+                        >
+                        <input
+                            class="contact-panel__form-item contact-panel__input"
+                            type="text"
+                            id="fname"
+                            name="firstname"
+                            placeholder="Imię.."
+                            required
+                        />
 
-            <div class="helpful-information">PRZYDATNE INFORMACJE</div>
-            <div class="map"></div>
-            <div class="contact"></div>
+                        <label
+                            class="contact-panel__form-item contact-panel__input-label"
+                            for="lname"
+                            >Nazwisko</label
+                        >
+                        <input
+                            class="contact-panel__form-item contact-panel__input"
+                            type="text"
+                            id="lname"
+                            name="lastname"
+                            placeholder="Nazwisko.."
+                        />
+
+                        <label
+                            class="contact-panel__form-item contact-panel__textarea-label"
+                            for="subject"
+                            >Treść pytania</label
+                        >
+                        <textarea
+                            class="contact-panel__form-item contact-panel__textarea"
+                            id="subject"
+                            name="subject"
+                            placeholder="Write something.."
+                            style="height: 200px"
+                            required
+                        ></textarea>
+
+                        <input
+                            class="contact-panel__form-item contact-panel__submit-btn"
+                            type="submit"
+                            value="Wyślij wiadomość"
+                        />
+                    </form>
+                </div>
+            </div>
         </div>
 
         <script src="app.js"></script>
